Add local dependencies
